--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@nestjs/mongoose": "^10.0.10",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@types/autocannon": "^7.12.5",
+    "autocannon": "^7.15.0",
     "axios": "^1.7.4",
     "bcrypt": "^5.1.1",
     "cache-manager": "^5.7.6",
