--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "test:autocannon": "autocannon -c 1000 -d 10 --renderStatusCodes --latency --warmup [ -c 1 -d 2 ] -w 100 http://localhost:3001/api/v1/decks/create-deck", 
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
