--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "cache-manager-redis-yet": "^5.1.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "JSONStream": "^1.3.5",
     "mongoose": "^8.5.2",
     "passport-jwt": "^4.0.1",
     "redis": "^4.7.0",
@@ -49,6 +50,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.0",
