--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "test:autocannon": "autocannon -c 1000 -d 10 --renderStatusCodes --latency --warmup [ -c 1 -d 2 ] -w 100 http://localhost:3001/api/v1/decks/create-deck", 
+    "test:autocannon": "autocannon -w 10 -c 400 -d 20 --renderStatusCodes --latency --output --verbose --warmup [ -c 1 -d 2 ] http://localhost:3001/decks/admin/load-test",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
@@ -39,6 +39,8 @@
     "cache-manager-redis-yet": "^5.1.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "compression": "^1.7.4",
+    "express-queue": "^0.0.13",
     "mongoose": "^8.5.2",
     "passport-jwt": "^4.0.1",
     "redis": "^4.7.0",
@@ -50,6 +52,7 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/compression": "^1.7.5",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
