--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "*",
+    "@nestjs/microservices": "^10.4.8",
     "@nestjs/mongoose": "^10.0.10",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
@@ -45,6 +46,7 @@
     "compression": "^1.7.4",
     "express-queue": "^0.0.13",
     "JSONStream": "^1.3.5",
+    "kafkajs": "^2.2.4",
     "mongoose": "^8.5.2",
     "passport-jwt": "^4.0.1",
     "redis": "^4.7.0",
