--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@nestjs/mongoose": "^10.0.10",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/websockets": "^10.4.12",
     "@types/autocannon": "^7.12.5",
     "autocannon": "^7.15.0",
     "axios": "^1.7.4",
@@ -51,7 +52,8 @@
     "passport-jwt": "^4.0.1",
     "redis": "^4.7.0",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
